--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2024"
 aes-gcm = "0.10.3"
 anyhow = "1.0.101"
 blake3 = "1.8.3"
-hex = "0.4.3"
-rand = "0.10.0"
+clap = { version = "4.5.32", features = ["derive"] }
 reed-solomon-erasure = "6.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-thiserror = "2.0.18"
+
+[dev-dependencies]
+rand = "0.10.0"
+tempfile = "3.10.1"
