--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2024"
 [dependencies]
 aes-gcm = "0.10.3"
 anyhow = "1.0.101"
+bincode = { version = "2.0.1", features = ["serde"] }
 blake3 = "1.8.3"
 clap = { version = "4.5.32", features = ["derive"] }
 reed-solomon-erasure = "6.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+zstd = "0.13.3"
 
 [dev-dependencies]
 rand = "0.10.0"
